clusters/plex-r620/applications/tautulli/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    name: media
    app.kubernetes.io/managed-by: argocd
