clusters/plex-r620/applications/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: media
  labels:
    app: tautulli
spec:
  type: LoadBalancer
  ports:
  - port: 8181
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: tautulli
